# Vscode-Configuration-Template

./: cpp.json  settings.json  verilog.json
C/: .clangd  CMakeLists.txt  main.c
C++/: .clangd  CMakeLists.txt  main.cpp
C++/Templates/ClassDrivedWindowsApp/: MyMiniMFC.cpp  main.cpp
C++/cmake/common/: PrintCommonInfo.cmake
C/cmake/common/: PrintCommonInfo.cmake
Config/: .clangd  settings.json
Config/My_cmake/embedded/: PrintEmbeddedInfo.cmake
Cpp/: CMakeLists.txt  main.cpp
Cpp/cmake/common/: PrintCommonInfo.cmake
Cpp/templates/ClassDrivedWindowsApp/: MyMiniMFC.h
Cpp/templates/CppRelated/: Class_MyString.cpp
FPGA/: Makefile  PHOSPHOR_ZYNQ_IO.xdc  tb_top.vcd  tb_top.view
FPGA/prj/icarus/: tb_top.vvp
FPGA/user/sim/: tb_top.v
FPGA/user/src/: top.v
FPGA/user/src/lib/: counter.v
QT/: CMakeLists.txt  QT_env.bat
QT/Multi-Directory/: CMakeLists.txt
QT/Multi-Directory/src/app/: CMakeLists.txt  mainwindow.ui
QT/Single-Directory/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
QT/Single-Directory/cmake/common/: PrintCommonInfo.cmake
QT/Single-Directory/cmake/qt/: PrintQtInfo.cmake
STM32/HAL/: CMakeLists.txt
STM32/HAL/cmake/: gcc-arm-none-eabi.cmake
STM32/HAL/cmake/common/: PrintCommonInfo.cmake
STM32/HAL_F4/: App.ioc  CMakeLists.txt  My_ToolBox.md  hal.ioc
STM32/HAL_F4/.cache/clangd/index/: __stdarg___gnuc_va_list.h.4FD76B5A24DE562F.idx  __stddef_header_macro.h.EB3D21F8AD46C17B.idx  __stddef_max_align_t.h.B8D832D8D31853DF.idx  __stddef_null.h.2428190342ECCB8A.idx  __stddef_offsetof.h.964214BBFAE4B2DC.idx  __stddef_ptrdiff_t.h.BDCABA2677E7CA44.idx  __stddef_size_t.h.CC34D754624488B0.idx  __stddef_wchar_t.h.FB6C3957CE7E8681.idx  __stddef_wint_t.h.88245E8359E03FF9.idx  _ansi.h.AE10FBF1FA093DB2.idx  _default_types.h.9EC372A327F0ACC1.idx  _endian.h.8B34A0FEBB7AB613.idx  _intsup.h.AF05416C39977C1E.idx  _locale.h.F5B743493CB368E3.idx  _newlib_version.h.FB7C889E3C675D60.idx  _pthreadtypes.h.DFD959FAA8859A71.idx  _sigset.h.0B5E4D192B3B8EB2.idx  _stdint.h.261FA10250536981.idx  _time.h.4E0F185AE6115F54.idx  _timespec.h.C2923B7D8EE6D1BC.idx  _timeval.h.BD42F13DD18211BC.idx  _types.h.20DD7D6D1A3A48B2.idx  _types.h.839D5C0C8DE02CA5.idx  alloca.h.C5A0AD3A0288B655.idx  beep.c.40E424E30F43E43A.idx  beep.h.02CF79084D2E7AF4.idx  btim.c.7AC9A794F9007C43.idx  btim.h.B72E008F68521912.idx  cdefs.h.E526B224437E2781.idx  cmsis_compiler.h.E7FBAF24564FB314.idx  cmsis_gcc.h.3349A9C52A9E6F00.idx  cmsis_version.h.1E348B5CACF1A220.idx  config.h.0CDF0D06D720C664.idx  core_cm4.h.F4BF1908B5CD7050.idx  debug.h.5E10424AF744BFAF.idx  delay.c.7A672A654B910146.idx  delay.h.48BCFA213AF9984E.idx  endian.h.6F6C160822BAD428.idx  errno.h.23B0419DA4E863C2.idx  errno.h.54104B0DEED8C1DB.idx  (+97 more)
STM32/HAL_F4/Core/Inc/: debug.h  main.h  stm32f4xx_hal_conf.h
STM32/HAL_F4/Core/Src/: main.c  syscalls.c
STM32/HAL_F4/Drivers/BSP/BEEP/: beep.c  beep.h
STM32/HAL_F4/Drivers/BSP/EXTI/: exti.c  exti.h
STM32/HAL_F4/Drivers/BSP/KEY/: key.c  key.h
STM32/HAL_F4/Drivers/BSP/LCD/: lcd.h  lcd_ex.c
STM32/HAL_F4/Drivers/BSP/LED/: led.c  led.h
STM32/HAL_F4/Drivers/BSP/TIMER/: btim.c  btim.h
STM32/HAL_F4/Drivers/BSP/WDG/: wdg.c  wdg.h
STM32/HAL_F4/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_sram.h
STM32/HAL_F4/Drivers/SYSTEM/sys/: sys.c
STM32/HAL_F4/Drivers/SYSTEM/usart/: usart.c
STM32/HAL_F4/cmake/stm32cubemx/: CMakeLists.txt
STM32/Register/: Makefile  compile_commands_generator.py  compile_flags.txt
STM32/StdLib/: Makefile
